# plutus-dev-container

./: .gitignore  LICENSE  README.md  cabal.project  plutus.cabal
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: Common.hs  Types.hs  Utils.hs
src/BasicPolicy/: Offchain.hs  Onchain.hs
src/BasicValidator/: Offchain.hs  Onchain.hs
tests/IntegrationTest/: Main.hs
tests/UnitTest/: BasicPolicy.hs  BasicValidator.hs  Main.hs
tests/UnitTest/Utils/: FakePolicy.hs  MockBasicValidator.hs
